--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ li {
 /* top */
 .hero-image {
   background-image: url("/img/topbk.jpg");
-  /* background-color: #023047; */
+
   height: 100vh;
   width: 100vw;
   background-position: center;
@@ -30,7 +30,7 @@ li {
   background-size: cover;
   position: relative;
   /* background-size: 1500px 700px; */
-  background-color: #06546c;
+  /* background-color: #06546c; */
 }
 
 .hero-text {
@@ -162,7 +162,7 @@ li {
 .music-sec {
   display: flex;
   flex-direction: column;
-height:100vh;
+  height:130vh;
   background-color: #06546c;
 }
 
@@ -276,10 +276,12 @@ border-radius: 50%;
 }
 
 @media only screen and (max-width:768px){
-  .music-sec,.hero-image,.menus,.nav-ul{
+ 
+
+  /* .music-sec,.hero-image,.menus,.nav-ul{
     width:100%;
     height:100%;
-  }
+  } */
  
   .menu-img{
     width:10rem;
